# GameOfLifeSFML

GameOfLife/: CMakeLists.txt  GameOfLife.cpp  GameOfLife.h  RingBuffer.h  main.cpp
GameOfLifeIMGUI/: GameOfLife.h  main.cpp
